navabar alignment fixed

--- a/src/components/Pages/Landing/Sections/Navbar/styles/navbar.module.scss
+++ b/src/components/Pages/Landing/Sections/Navbar/styles/navbar.module.scss
@@ -561,7 +561,7 @@ $navbar-height: 70px;
 
 .menu {
   position: absolute;
-  top: 80;
+  top: 90;
   left: 20;
   height: auto;
   width: 90%;
